[package]
name = "udp"
version = "0.27.1"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = "A lightweight and efficient Rust library for building UDP servers with request-response handling."
keywords = ["udp", "request", "response", "server", "network"]
repository = "https://github.com/eastspire/udp.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github",
    "logs",
    "**/*.log"
]

[dependencies]
future-fn = "0.2.5"
clonelicious = "2.0.3"
color-output = "6.6.3"
file-operation = "0.5.12"
hyperlane-log = "1.16.6"
lombok-macros = "1.11.3"
recoverable-spawn = "3.7.10"
recoverable-thread-pool = "2.3.5"
std-macro-extensions = "0.23.2"
tokio = { version = "1.45.0", features = ["full"] }
once_cell = "1.21.3"
simd-json = "0.15.1"
serde = "1.0.219"
serde_json = "1.0.140"
futures = "0.3.31"
server-manager = "3.2.4"
hyperlane-broadcast = "0.2.2"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
